--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ l<!DOCTYPE html>
             margin-top: 50px;
         }
     </style>
+
+    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+
+
 </head>
 
 <body>
@@ -203,20 +207,7 @@ l<!DOCTYPE html>
         <p>&copy; 2024 Our School. All rights reserved.</p>
     </footer>
 
-    <!-- JavaScript for Modal -->
-    <script>
-        function openModal(imgElement) {
-            var modal = document.getElementById("imageModal");
-            var modalImg = document.getElementById("modalImage");
-            modal.style.display = "flex";
-            modalImg.src = imgElement.src;
-        }
-
-        function closeModal() {
-            var modal = document.getElementById("imageModal");
-            modal.style.display = "none";
-        }
-    </script>
+    <script src="script.js"></script>
 
 </body>
 
