--- a/index.html
+++ b/index.html
@@ -1,214 +1,91 @@
-l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our School - Core Values & Gallery</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Prestigious School Core Values</title>
+    
+    <!-- Linking the final CSS file -->
+    <link rel="stylesheet" href="style.css"> <!-- Assume styles.css is the CSS code you provided -->
 
     <style>
-        /* General Styles */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
-            color: #333;
-        }
-
-        h1, h2, h3, h4 {
-            margin: 0;
-            padding-bottom: 10px;
-        }
-
-        header {
-            background-color: #00796B;
-            color: white;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #004D40;
-        }
-
-        nav a {
-            padding: 14px 25px;
-            color: white;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-
-        nav a:hover {
-            background-color: #26A69A;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-
-        .content {
-            margin-top: 30px;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .values-section ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        .values-section ul li {
-            padding: 10px 0;
-        }
-
-        /* Gallery Styles */
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            margin-top: 30px;
-        }
-
-        .gallery img {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-        }
-
-        .gallery img:hover {
-            transform: scale(1.05);
-            box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
-        }
-
-        /* Modal Styles */
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.8);
-            padding-top: 50px;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .modal-content {
-            max-width: 90%;
-            max-height: 80%;
-            margin: auto;
-            display: block;
-            border-radius: 10px;
-        }
-
-        .close {
-            position: absolute;
-            top: 15px;
-            right: 35px;
-            color: white;
-            font-size: 40px;
-            font-weight: bold;
-        }
-
-        .close:hover, .close:focus {
-            color: #bbb;
-            cursor: pointer;
-        }
-
-        footer {
-            background-color: #004D40;
-            color: white;
-            text-align: center;
-            padding: 15px 0;
-            margin-top: 50px;
+        /* Adding any critical CSS in the head (optional, for inline styling before CSS is fully loaded) */
+        body { 
+            background-color: #f4f4f9;
+            font-family: 'Georgia', serif;
         }
     </style>
-
-    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
-
-
 </head>
 
 <body>
 
-    <!-- Header -->
+    <!-- Header Section -->
     <header>
-        <h1>Welcome to Our School</h1>
-        <p>We are committed to shaping bright futures!</p>
+        <h1>Our School Values</h1>
+        <p>Nurturing excellence with elegance and integrity</p>
     </header>
 
-    <!-- Navigation -->
+    <!-- Navigation Section -->
     <nav>
         <a href="#values">Core Values</a>
         <a href="#gallery">Gallery</a>
-        <a href="#contact">Contact</a>
+        <a href="#contact">Contact Us</a>
     </nav>
 
-    <!-- Main Content Area -->
+    <!-- Main Content Container -->
     <div class="container">
 
         <!-- Core Values Section -->
-        <section id="values" class="content values-section">
+        <section id="values" class="values-section">
             <h2>Our Core Values</h2>
-            <p>We believe in fostering an environment of integrity, respect, and resilience. These values shape our students into thoughtful, hardworking, and compassionate individuals.</p>
             <ul>
-                <li><strong>Integrity:</strong> Acting with honesty and transparency in all we do.</li>
-                <li><strong>Respect:</strong> Valuing each other’s perspectives and diversity.</li>
-                <li><strong>Excellence:</strong> Striving for personal and academic achievement.</li>
-                <li><strong>Community:</strong> Building a strong and supportive environment.</li>
-                <li><strong>Resilience:</strong> Overcoming challenges with determination.</li>
+                <li><strong>Integrity:</strong> We nurture a culture of honesty and strong moral principles.</li>
+                <li><strong>Excellence:</strong> Pursuing the highest standards in academic and personal development.</li>
+                <li><strong>Respect:</strong> We cultivate an environment of mutual respect and empathy.</li>
+                <li><strong>Innovation:</strong> Encouraging creativity and forward-thinking in our students.</li>
+                <li><strong>Community:</strong> Promoting collaboration and strong community ties.</li>
             </ul>
         </section>
 
         <!-- Gallery Section -->
-        <section id="gallery" class="content">
-            <h2>School Gallery</h2>
-            <p>Explore our gallery and witness the wonderful moments captured at our school!</p>
-
+        <section id="gallery" class="gallery-section">
+            <h2>Gallery</h2>
             <div class="gallery">
-                <img src="https://via.placeholder.com/300" alt="Event 1" onclick="openModal(this)">
-                <img src="https://via.placeholder.com/300" alt="Event 2" onclick="openModal(this)">
-                <img src="https://via.placeholder.com/300" alt="Event 3" onclick="openModal(this)">
-                <img src="https://via.placeholder.com/300" alt="Event 4" onclick="openModal(this)">
-                <img src="https://via.placeholder.com/300" alt="Event 5" onclick="openModal(this)">
-            </div>
-
-            <!-- Modal for Enlarged Image -->
-            <div id="imageModal" class="modal">
-                <span class="close" onclick="closeModal()">&times;</span>
-                <img class="modal-content" id="modalImage">
+                <img src="school-pic1.jpg" alt="School Picture 1">
+                <img src="school-pic2.jpg" alt="School Picture 2">
+                <img src="school-pic3.jpg" alt="School Picture 3">
+                <img src="school-pic4.jpg" alt="School Picture 4">
             </div>
         </section>
 
         <!-- Contact Section -->
-        <section id="contact" class="content">
+        <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you have any questions, feel free to reach out!</p>
-            <p><strong>Email:</strong> info@ourschool.com</p>
-            <p><strong>Phone:</strong> (123) 456-7890</p>
+            <p>If you have any inquiries or would like to visit our school, feel free to reach out.</p>
+            <p>Email: contact@prestigiousschool.edu</p>
+            <p>Phone: +1 (234) 567-8900</p>
         </section>
+
     </div>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Our School. All rights reserved.</p>
+        <p>&copy; 2024 Prestigious School. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <!-- Modal for Gallery -->
+    <div class="modal">
+        <span class="close">&times;</span>
+        <img class="modal-content" id="modalImage">
+    </div>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollToTop">↑</button>
+
+    <!-- Linking the final JavaScript file -->
+    <script src="script.js"></script> <!-- Assume script.js is the JavaScript file -->
 </body>
 
 </html>
